# multi-doc-chat

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  main.py  plan.md  pyproject.toml  test_api.py
.github/workflows/: aws.yml  ci.yaml  task-definition.json
multi_doc_chat/api/: app.py  models.py  session_store.py
multi_doc_chat/config/: settings.py
multi_doc_chat/exception/: exceptions.py
multi_doc_chat/logger/: logger.py
multi_doc_chat/model/: rag_model.py
multi_doc_chat/prompts/: templates.py
multi_doc_chat/session/: session.py
multi_doc_chat/src/: ingestion.py  retrieval.py
multi_doc_chat/utils/: file_utils.py
notebook/: RAG.ipynb  experiments.ipynb
static/: styles.css
templates/: index.html
test/: conftest.py  test_api.py  test_exceptions.py  test_file_utils.py  test_ingestion.py  test_models.py  test_prompts.py  test_retrieval.py  test_session.py  test_session_store.py  test_settings.py
